Import of BOOK/spod5-0.02 from CPAN.
gitpan-cpan-distribution: spod5
gitpan-cpan-version:      0.02
gitpan-cpan-path:         BOOK/spod5-0.02.tar.gz
gitpan-cpan-author:       BOOK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,13 @@
 ---
 name: spod5
-version: 0.01
+version: 0.02
 author: ~
 abstract: Turn pod into S5
 license: perl
 requires:
   Pod::POM: 0.17
   Pod::POM::View::HTML::Filter: 0.05
+  Template: 2.08
   Test::More: 0
 provides: {}
 generated_by: Module::Build version 0.26
